--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="node_modules/sweetalert2/dist/sweetalert2.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Shopping List</title>
   </head>
@@ -75,7 +79,7 @@
 
       <button id="clear" class="btn-clear">Clear All</button>
     </div>
-
+    <script src="node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
